--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "react-scripts": "3.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "deploy": "gh-pages -d storybook-static",
-    "build:deploy": "npm run build && npm run deploy",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "deploy": "gh-pages -d storybook-static",
+    "build:deploy": "npm run build-storybook && npm run deploy",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
